--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -3,9 +3,12 @@
   <title>Things</title>
 </head>
 <body>
-  <h1>
-    Things
-  </h1>
+  <h1>Things</h1>
+    <form action = "{%url 'home'%}" method = "post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type = "submit" value="Input">
+    </form>
   <p>Some stuff about things goes here.</p>
 </body>
 </html>
